Basic resume format

--- a/Resume.html
+++ b/Resume.html
@@ -1,3 +1,32 @@
-<div style="background-color: rgb(13,17,23)">
-<h1>Resume</h1>
+<style>
+  body{background-color: rgb(13,17,23)}
+  .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
+  .split{display:flex;background-color: white;}
+  .skills-contact{flex-direction:column}
+  .workHistory{flex-direction:column}
+</style>
+<div class="header">
+  <h1 class="heading">Karthik Joshi</h1>
+  <h3>Lead - Full Stack</h3>
 </div>
+<div class="split">
+  <div class="workHistory">
+    <div class="title">
+          Well-qualified Lead Full Stack Developer familiar with wide range of
+      programming utilities and languages. Knowledgeable of backend
+      and frontend development requirements. Experience in handling
+      development teams through agile methodology. Collaborative
+      team player with excellent technical abilities offering 10+ years of
+      related experience.
+    </div>
+    <div>
+      Education
+    </div>
+  </div>
+  <div class="skills-contact">
+    <div>Contact</div>
+    <div>Skills</div>
+    
+  </div>
+</div>
+
