--- a/Resume.html
+++ b/Resume.html
@@ -1,18 +1,26 @@
-<style>
-  body{background-color: rgb(13,17,23)}
-  .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
-  .split{display:flex;background-color: white;}
-  .skills-contact{flex-direction:column}
-  .workHistory{flex-direction:column}
-</style>
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  <style>
+    body {
+      font-family: 'Lato';font-size: 22px;
+      background-color: rgb(13,17,23)
+    }
+    .heading{padding-top: 150px;padding-left:20px;font-size:100px;}
+    .heading{padding-left:20px;font-size:70px;}
+    .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
+    .split{display:flex;background-color: white;}
+    .workHistory{flex-direction:column; flex:2;}
+    .skills-contact{flex-direction:column; flex:1;}
+  </style>
+</head>
 <div class="header">
   <h1 class="heading">Karthik Joshi</h1>
-  <h3>Lead - Full Stack</h3>
+  <h3 class="heading2">Lead - Full Stack</h3>
 </div>
 <div class="split">
   <div class="workHistory">
     <div class="title">
-          Well-qualified Lead Full Stack Developer familiar with wide range of
+      Well-qualified Lead Full Stack Developer familiar with wide range of
       programming utilities and languages. Knowledgeable of backend
       and frontend development requirements. Experience in handling
       development teams through agile methodology. Collaborative
