--- a/Resume.html
+++ b/Resume.html
@@ -5,8 +5,8 @@
       font-family: 'Lato';font-size: 22px;
       background-color: rgb(13,17,23)
     }
-    .heading{padding-top: 150px;padding-left:20px;font-size:100px;}
-    .heading{padding-left:20px;font-size:70px;}
+    .heading{padding-top: 65px;padding-left:20px;font-size:100px;}
+    .heading2{padding-left:20px;font-size:70px;}
     .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
     .split{display:flex;background-color: white;}
     .workHistory{flex-direction:column; flex:2;}
