--- a/Resume.html
+++ b/Resume.html
@@ -2,15 +2,16 @@
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
   <style>
     body {
-      font-family: 'Lato';font-size: 22px;
+      font-family: Lato;font-size: 22px;
       background-color: rgb(13,17,23)
     }
-    .heading{padding-top: 65px;padding-left:20px;font-size:100px;}
-    .heading2{padding-left:20px;font-size:70px;}
+    .heading{padding-top: 30px;padding-left:20px;font-size:60px;}
+    .heading2{padding-left:20px;font-size:30px;}
     .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
-    .split{display:flex;background-color: white;}
+    .split{display:flex;background-color: white;height:auto;}
     .workHistory{flex-direction:column; flex:2;}
-    .skills-contact{flex-direction:column; flex:1;}
+    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244)}
+    .color-blue{color: rgb(13,17,23)}
   </style>
 </head>
 <div class="header">
@@ -28,13 +29,36 @@
       related experience.
     </div>
     <div>
+        <h4 class="color-blue">Work History</h4>
+        <hr>
+    </div>
+    <div>
       Education
     </div>
   </div>
   <div class="skills-contact">
-    <div>Contact</div>
-    <div>Skills</div>
-    
+    <div class="contact">
+      <div class="contact-header"><h4 class="color-blue">Contact</h4></div>
+      <hr>
+      <div class="contact-item">joshi.karthik@yahoo.com</div>
+    </div>
+    <div>
+      <div class="skillset-header"><h4 class="color-blue">Skills</h4></div>
+      <hr>
+      <div class="skillset">
+        <div>JavaScript</div>
+        <div>React</div>
+        <div>Angular</div>
+        <div>Node</div>
+        <div>Java</div>
+        <div>SQL</div>
+        <div>Docker</div>
+        <div>Microservices</div>
+        <div>AWS</div>
+        <div>GIT</div>
+        <div>Grails</div>
+      </div>
+    <div>
   </div>
 </div>
 
