margin changes, color text headers

--- a/Resume.html
+++ b/Resume.html
@@ -7,11 +7,11 @@
     }
     .heading{padding-top: 30px;padding-left:20px;font-size:60px;}
     .heading2{padding-left:20px;font-size:30px;}
-    .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%}
+    .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%;}
     .split{display:flex;background-color: white;height:auto;}
-    .workHistory{flex-direction:column; flex:2;}
-    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244)}
-    .color-blue{color: rgb(13,17,23)}
+    .workHistory{flex-direction:column; flex:2;margin: 10px;}
+    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244);margin: 10px;}
+    .color-blue{color: rgb(26,64,154);}
   </style>
 </head>
 <div class="header">
@@ -40,7 +40,7 @@
     <div class="contact">
       <div class="contact-header"><h4 class="color-blue">Contact</h4></div>
       <hr>
-      <div class="contact-item">joshi.karthik@yahoo.com</div>
+      <div class="contact-item"><b>Email</b><br>joshi.karthik@yahoo.com</div>
     </div>
     <div>
       <div class="skillset-header"><h4 class="color-blue">Skills</h4></div>
