--- a/Resume.html
+++ b/Resume.html
@@ -10,8 +10,9 @@
     .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%;}
     .split{display:flex;background-color: white;height:auto;}
     .workHistory{flex-direction:column; flex:2;margin: 10px;}
-    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244);margin: 10px;}
+    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244);margin: 10px;padding-left:20px;}
     .color-blue{color: rgb(26,64,154);}
+    .skillset-item{margin-bottom:10px;}
   </style>
 </head>
 <div class="header">
@@ -46,17 +47,17 @@
       <div class="skillset-header"><h4 class="color-blue">Skills</h4></div>
       <hr>
       <div class="skillset">
-        <div>JavaScript</div>
-        <div>React</div>
-        <div>Angular</div>
-        <div>Node</div>
-        <div>Java</div>
-        <div>SQL</div>
-        <div>Docker</div>
-        <div>Microservices</div>
-        <div>AWS</div>
-        <div>GIT</div>
-        <div>Grails</div>
+        <div class="skillset-item">JavaScript</div>
+        <div class="skillset-item">React</div>
+        <div class="skillset-item">Angular</div>
+        <div class="skillset-item">Node</div>
+        <div class="skillset-item">Java</div>
+        <div class="skillset-item">SQL</div>
+        <div class="skillset-item">Docker</div>
+        <div class="skillset-item">Microservices</div>
+        <div class="skillset-item">AWS</div>
+        <div class="skillset-item">GIT</div>
+        <div class="skillset-item">Grails</div>
       </div>
     <div>
   </div>
