--- a/Resume.html
+++ b/Resume.html
@@ -1,19 +1,6 @@
 <head>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-  <style>
-    body {
-      font-family: Lato;font-size: 22px;
-      background-color: rgb(13,17,23)
-    }
-    .heading{padding-top: 30px;padding-left:20px;font-size:60px;}
-    .heading2{padding-left:20px;font-size:30px;}
-    .header{background-color: rgb(26,64,154);color:white;height:200px;width: 100%;}
-    .split{display:flex;background-color: white;height:auto;}
-    .workHistory{flex-direction:column; flex:2;margin: 10px;}
-    .skills-contact{flex-direction:column; flex:1;background-color:rgb(244,244,244);margin: 10px;padding-left:20px;}
-    .color-blue{color: rgb(26,64,154);}
-    .skillset-item{margin-bottom:10px;}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <div class="header">
   <h1 class="heading">Karthik Joshi</h1>
